<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskPreview">


    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/task_title"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/taskContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/task_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/taskTitle"/>


    <Button
        android:id="@+id/updateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/taskContent"
        />

    <Button
        android:id="@+id/deleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_centerInParent="true"
        android:layout_below="@id/taskContent"
        />

    <Button
        android:id="@+id/listPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_preview"
        android:layout_alignParentRight="true"
        android:layout_below="@id/taskContent"
        />

</RelativeLayout>