<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTask">

    <TextView
        android:id="@+id/createNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/create_new_task"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/input_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/createNewTitle"
        android:hint="@string/title"
         />

    <EditText
        android:id="@+id/input_new_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/input_new_task"
        android:hint="@string/content"
         />
    <Button
        android:id="@+id/btn_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_below="@id/input_new_content" />
</RelativeLayout>