<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_Task">

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update_the_task"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/input_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/update_title"
        tools:layout_editor_absoluteX="48dp"
        android:layout_below="@id/updateTitle"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/input_update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/update_content"
        android:layout_below="@id/input_update_title"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="123dp" />


    <Button
        android:id="@+id/updateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_centerInParent="true"
        android:layout_below="@id/input_update_content"
        />

</RelativeLayout >