<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/to_do_list_application"
        android:textColor="@color/black"
        android:textSize="26dp"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_below="@id/textView"
        android:text="@string/my_to_do_list"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create2"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView1"
        />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/create"

        android:layout_marginTop="0dp"
        android:choiceMode="multipleChoice" />


</RelativeLayout>